# ePortfolio

./: content.css  hardware.html  index.html  land.css  styles.css  templateC.html
Hardware/: Arduino.html  Capstone.html  PCB.html  index.html  soldering.html
ProjectFiles/Maze/: CMakeLists.txt  FileIO.c  FileIO.h  LinkedLists.c  LinkedLists.h  MazeControls.c  MazeControls.h  assignment5.rar  main.c  maze.txt
ProjectFiles/PCBFinal/: RGB_LED_LIBRARY.OLB  RGB_LED_LIBRARY_0.OBK  RGB_LED_SHIELD.DSN  RGB_LED_SHIELD_0.DBK  init.md  rgb_led_shield.opj
ProjectFiles/PCBFinal/allegro/: BOTTOM.art  OUTLINE.art  RGB_LED_SHIELD_FINAL-1-2.drl  RGB_LED_SHIELD_FINAL.brd  SILKSCREENTOP.art  SOLDERMASKBOTTOM.art  SOLDERMASKTOP.art  TOP.art  allegro.jrl  allegro.jrl,1  aperture.log,1  art_aper.txt  art_aper.txt,1  bestsave.w  bottom  dbdoctor.log,1  eco.txt  master.tag  monitor.sts  nc_param.txt  nc_param.txt,1  nc_tools_auto.txt  nclegend.log,1  netrev.lst  padstack_editor.jrl  photoplot.log,1  pstchip.dat,1  pstchip.dat,2  pstchip.dat,3  pstxnet.dat,1  pstxnet.dat,2  pstxnet.dat,3  pstxprt.dat,1  pstxprt.dat,2  pstxprt.dat,3  via.pad
ProjectFiles/PCBFinal/symbols/: CCAP100.dra  DIP28_S.dra  RGB.dra  con2.dra  (+50 more)
ProjectFiles/Python/: Run_BattleShip.bat  init.md
ProjectFiles/RPG/: init.md
Resume/: index.html
Software/: battleship.html  index.html  maze.html  prpg.html
css/: docs.css  header.css  land.css  landing.css  meat.css  styles.css
js/: functions.js  gfunctions.js  hardware.js  resume.js  software.js  webbased.js
web-dev/: PBB1.html  index.html  pbb2.html  test.html
(+24 files in other folders)
